--- a/prototipo_html/index.html
+++ b/prototipo_html/index.html
@@ -26,6 +26,11 @@
     <div class="navBar">
         <ul>
             <li><input type="text" placeholder="Buscar..."></li>
+            <div class="iconsBar">
+                <i class="fa-solid fa-cog"></i>
+                <i class="fa-solid fa-bell"></i>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTyqI7u9US1GS-0749Cj7KOXgxxHrgkLqgtEw&s">
+            </div>
         </ul>
     </div>
 </body>
